<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">开奖查询</string>
    <string name="title_dashboard">我的运势</string>
    <string name="title_notifications">我的小Q</string>
    <string name="title_lottery_more">详细开奖查询</string>
    <string name="lotter_no_net">无网络链接</string>
    <string name="lottery_net_refresh">刷新</string>
    <string name="luck_more_txt">星座运势</string>
    <string name="luck_love_star">爱情指数</string>
    <string name="luck_money_star">财务指数</string>
    <string name="luck_all_star">总体指数</string>
    <string name="luck_work_star">工作指数</string>
    <string name="lucky_num">幸运数字</string>
    <string name="lucky_direction">幸运方位</string>

    <string name="work_txt">工作运势</string>
    <string name="love_txt">爱情运势</string>
    <string name="money_txt">财务运势</string>
    <string name="general_txt">整体运势</string>
    <string name="day_notice">小提示</string>
    <string name="apk_downing">下载中，请稍后...</string>


    <string-array name="ac_marry_constellation">
        <item> 白羊座\n3.21&#8211;4.19</item>
        <item> 金牛座\n4.20&#8211;5.20</item>
        <item> 雙子座\n5.21&#8211;6.21</item>
        <item> 巨蟹座\n6.22&#8211;7.22</item>
        <item> 獅子座\n7.23&#8211;8.22</item>
        <item> 處女座\n8.23&#8211;9.22</item>
        <item> 天秤座\n9.23&#8211;10.23</item>
        <item> 天蠍座\n10.24&#8211;11.22</item>
        <item> 射手座\n11.23&#8211;12.21</item>
        <item> 摩羯座\n12.22&#8211;1.19</item>
        <item> 水瓶座\n1.20&#8211;2.18</item>
        <item> 雙魚座\n2.19&#8211;3.20</item>
    </string-array>
</resources>
